[package]
name = "fePink"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["consoleapi", "minwindef", "d3d9", "libloaderapi", "winnt"] } 

[lib]
name = "d3d9"
crate-type = ["cdylib"]
